Changes for 1.1beta5:

 - use english translation if cannot find local phrase (Alexei)
 - added Chinese translation. (Alexei)
 - updated German translation. Thanks to Julian. (Alexei)
 - fixed processing of icmpping and icmppingsec (Alexei)
 - seperartion of LDFLAGS and LIBS in all Makefile.am (Alexei)
 - fixed MySQL-related configuration and making issues (Alexei)
 - fixed incorrect handling of retrieved values in zabbix_get (Alexei)
 - fixed processing of simple checks (Alexei)
 - new concept of defenition of actions, one screen (Alexei)
 - new fields for table 'actions' (Alexei)
 - new item value type: integer 64bit (Alexei)
 - added 'update' operation for triggers of template hosts (Eugene)
 - added 'update' operation for operations of template hosts (Eugene)
 - calculated minimum Y in graphs (Alexei)
 - added configurable number of plain text elements for screens (Alexei)
 - added screens_items.elements (Alexei)
 - escalations removed from GUI (Alexei)
 - fixed typo in tr_comments.php (Alexei)

Changes for 1.1beta4:

 - fixed system.swap.size (Eugene)
 - fixed vm.memory.size (Eugene)
 - fixed configuration file parsing for user specifed functions (Eugene)
 - added support of system.cpu.load for Tru64 (Eugene)
 - added support of system.cpu.util for Tru64 (Eugene)
 - added support of vm.memory.size for Tru64 (Eugene)
 - added support of proc.num for Tru64 (Eugene)
 - fixed processing of UserParameters which are pre/postfixed with spaces (Alexei)
 - fixed processing of SNMP and simple checks (Alexei)
 - fixed compilation with --with-ldap (Alexei)
 - SNMP string values to be automatically converted to numeric (Alexei)
 - fixed nodata() processing when used with host 'status' (Alexei)
 - fixed conflict with MySQL headers (Eugene)

Changes for 1.1beta3:

 - improved support vfs.file.time[filename,<access|modify|change>] (Eugene)
 - calculate MAX of Y axis based on average values (Alexei)
 - automatic recovery of unsupported items (Alexei)